button them of service

--- a/WeddingApp/WeddingApp/WeddingApp.csproj
+++ b/WeddingApp/WeddingApp/WeddingApp.csproj
@@ -170,6 +170,7 @@
     <Compile Include="ViewModels\DashBoardVM.cs" />
     <Compile Include="ViewModels\DishListVM.cs" />
     <Compile Include="ViewModels\EmployeeListVM.cs" />
+    <Compile Include="ViewModels\ServiceListVM.cs" />
     <Compile Include="ViewModels\ViewModelBase.cs" />
     <Compile Include="Views\AddDishWindow.xaml.cs">
       <DependentUpon>AddDishWindow.xaml</DependentUpon>
