--- a/WeddingApp/WeddingApp/App.config
+++ b/WeddingApp/WeddingApp/App.config
@@ -18,6 +18,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="WeddingDBEntities" connectionString="metadata=res://*/Models.WeddingDB.csdl|res://*/Models.WeddingDB.ssdl|res://*/Models.WeddingDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=C:\Users\ASUS\OneDrive\Documents\WeddingDB.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="WeddingDBEntities" connectionString="metadata=res://*/Models.WeddingDB.csdl|res://*/Models.WeddingDB.ssdl|res://*/Models.WeddingDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\WeddingDB.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
