--- a/WeddingApp/WeddingApp/WeddingApp.csproj
+++ b/WeddingApp/WeddingApp/WeddingApp.csproj
@@ -259,6 +259,9 @@
     <Compile Include="Views\UserControls\ServiceSelectionUC.xaml.cs">
       <DependentUpon>ServiceSelectionUC.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\UserControls\SetWeddingInfomationUC.xaml.cs">
+      <DependentUpon>SetWeddingInfomationUC.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\UserControls\WeddingHallUC.xaml.cs">
       <DependentUpon>WeddingHallUC.xaml</DependentUpon>
     </Compile>
@@ -389,6 +392,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\UserControls\ServiceSelectionUC.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\UserControls\SetWeddingInfomationUC.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
