Service_Add_Edit_Delete

--- a/WeddingApp/WeddingApp/WeddingApp.csproj
+++ b/WeddingApp/WeddingApp/WeddingApp.csproj
@@ -176,6 +176,7 @@
     <Compile Include="ViewModels\DishListVM.cs" />
     <Compile Include="ViewModels\DishTypeVM.cs" />
     <Compile Include="ViewModels\EditDishListVM.cs" />
+    <Compile Include="ViewModels\EditServiceVM.cs" />
     <Compile Include="ViewModels\EmployeeListVM.cs" />
     <Compile Include="ViewModels\ServiceListVM.cs" />
     <Compile Include="ViewModels\ViewModelBase.cs" />
