--- a/WeddingApp/WeddingApp/WeddingApp.csproj
+++ b/WeddingApp/WeddingApp/WeddingApp.csproj
@@ -181,6 +181,7 @@
     <Compile Include="ViewModels\LoginVM.cs" />
     <Compile Include="ViewModels\MainVM.cs" />
     <Compile Include="ViewModels\MenuVM.cs" />
+    <Compile Include="ViewModels\ServiceVM.cs" />
     <Compile Include="ViewModels\SetWeddingInfoVM.cs" />
     <Compile Include="ViewModels\ViewModelBase.cs" />
     <Compile Include="ViewModels\WeddingDetailVM.cs" />
