--- a/WeddingApp/WeddingApp/App.config
+++ b/WeddingApp/WeddingApp/App.config
@@ -18,6 +18,10 @@
     </providers>
   </entityFramework>
 	<connectionStrings>
-		<add name="WeddingDBEntities" connectionString="metadata=res://*/Models.WeddingDB.csdl|res://*/Models.WeddingDB.ssdl|res://*/Models.WeddingDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\WeddingDB.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-	</connectionStrings>
+  <add name="WeddingDBEntities" connectionString="metadata=res://*/Models.WeddingDB.csdl|res://*/Models.WeddingDB.ssdl|res://*/Models.WeddingDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\WeddingDB.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+   providerName="System.Data.EntityClient" />
+  <add name="WeddingApp.Properties.Settings.WeddingDBConnectionString"
+   connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\WeddingDB.mdf;Integrated Security=True"
+   providerName="System.Data.SqlClient" />
+ </connectionStrings>
 </configuration>
