--- a/WeddingApp/WeddingApp/packages.config
+++ b/WeddingApp/WeddingApp/packages.config
@@ -1,9 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
+  <package id="EPPlus" version="6.0.4" targetFramework="net472" />
+  <package id="EPPlus.Interfaces" version="6.0.0" targetFramework="net472" />
+  <package id="EPPlus.System.Drawing" version="6.0.0" targetFramework="net472" />
   <package id="LiveCharts" version="0.9.7" targetFramework="net472" />
   <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net472" />
   <package id="MaterialDesignColors" version="2.0.5" targetFramework="net472" />
   <package id="MaterialDesignThemes" version="4.4.0" targetFramework="net472" />
+  <package id="Microsoft.IO.RecyclableMemoryStream" version="1.4.1" targetFramework="net472" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.39" targetFramework="net472" />
 </packages>
