--- a/WeddingApp/WeddingApp/WeddingApp.csproj
+++ b/WeddingApp/WeddingApp/WeddingApp.csproj
@@ -188,6 +188,7 @@
     <Compile Include="ViewModels\AddRoleVM.cs" />
     <Compile Include="ViewModels\AddEmployeeVM.cs" />
     <Compile Include="ViewModels\ChangeEmployeeVM.cs" />
+    <Compile Include="ViewModels\CompleteInvoiceVM.cs" />
     <Compile Include="ViewModels\ControlBarVM.cs" />
     <Compile Include="ViewModels\DashBoardVM.cs" />
     <Compile Include="ViewModels\EditHallTypeVM.cs" />
