--- a/WeddingApp/WeddingApp/WeddingApp.csproj
+++ b/WeddingApp/WeddingApp/WeddingApp.csproj
@@ -189,6 +189,7 @@
     <Compile Include="ViewModels\AddEmployeeVM.cs" />
     <Compile Include="ViewModels\ChangeEmployeeVM.cs" />
     <Compile Include="ViewModels\CompleteInvoiceVM.cs" />
+    <Compile Include="ViewModels\CompleteInvoiceWindowVM.cs" />
     <Compile Include="ViewModels\ControlBarVM.cs" />
     <Compile Include="ViewModels\DashBoardVM.cs" />
     <Compile Include="ViewModels\EditHallTypeVM.cs" />
