--- a/WeddingApp/WeddingApp/WeddingApp.csproj
+++ b/WeddingApp/WeddingApp/WeddingApp.csproj
@@ -276,6 +276,7 @@
     <Compile Include="ViewModels\AddHallVM.cs" />
     <Compile Include="ViewModels\AddRoleVM.cs" />
     <Compile Include="ViewModels\AddEmployeeVM.cs" />
+    <Compile Include="ViewModels\AddServiceVM.cs" />
     <Compile Include="ViewModels\ChangeEmployeeVM.cs" />
     <Compile Include="ViewModels\CompleteInvoiceVM.cs" />
     <Compile Include="ViewModels\CompleteInvoiceWindowVM.cs" />
