--- a/WeddingApp/WeddingApp/App.config
+++ b/WeddingApp/WeddingApp/App.config
@@ -17,10 +17,6 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-	<connectionStrings>
-  <add name="WeddingDBEntities" connectionString="metadata=res://*/Models.WeddingDB.csdl|res://*/Models.WeddingDB.ssdl|res://*/Models.WeddingDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\WeddingDB.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  <add name="WeddingApp.Properties.Settings.WeddingDBConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\WeddingDB.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
- </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -53,4 +49,4 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-</configuration>
+<connectionStrings><add name="WeddingDatabaseEntities" connectionString="metadata=res://*/Models.WeddingData.csdl|res://*/Models.WeddingData.ssdl|res://*/Models.WeddingData.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\WeddingDatabase.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
